# debtonator

./: .clinerules  .env.example  .gitignore  CHANGELOG.md  README.md  alembic.ini  naive_datetime_report.md  pyproject.toml  pytest.ini  requirements.txt  run.py  test_migration.db-shm  test_migration.db-wal
alembic/: env.py
alembic/versions/: 12a0ff8f2088_change_payment_date_to_datetime.py  1d26ae49f3b8_initial_schema_with_relationships.py  2024_02_08_income_and_cashflow.py  5f5c553b9a57_migrate_bills_to_liabilities_and_.py  add_credit_limit_history.py  b7b53c9c2a40_add_parent_id_to_categories.py  create_feature_flags_table.py  d1d05c03f5e8_add_account_id_to_income.py  d9df624316a2_add_income_amount_check_constraint.py  e9caf0c10db0_remove_hardcoded_accounts.py
docs/: active_context.md  custom_instructions.md  documentation_recovery.md  model_compliance_checklist.md  model_compliance_review.md  product_context.md  progress.md  project_brief.md  schema_review_checklist.md  schema_review_findings.md  schema_test_implementation_checklist.md  system_patterns.md  task_finish.txt  task_notes.md  task_notes.txt  tech_context.md  test_failure_resolution_plan.md
docs/adr/: 001-database-schema-design.md  003-dynamic-accounts-and-bill-splits.md  007-bulk-import-functionality.md  011-compliance-review.md  011-datetime-standardization.md  012-validation-layer-standardization.md  013-decimal-precision-handling-update.md  013-decimal-precision-handling.md  014-repository-layer-for-crud-operations.md  015-default-uncategorized-category.md  016-account-type-expansion.md  017-payment-source-schema-simplification.md  README.md  backend-template.md  frontend-template.md  template.md
docs/blog/: vision-article.md
docs/code_review/: code-review-checklist.md  code-review-guide.md
docs/guides/: code_cleanup.md  (+5 more)
frontend/: .env.example  .eslintrc.json  jest.config.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: __init__.py  constants.py  main.py  version.py
temp_versions/: CHANGELOG_15e67f4.md  CHANGELOG_4d3eb15.md  CHANGELOG_8b256c0.md  CHANGELOG_d7816d5.md  CHANGELOG_d846851.md  CHANGELOG_efc1063.md  README_037ba17.md  README_15e67f4.md  README_4d3eb15.md  README_57fee45.md  README_7b3bb4e.md  README_f110c6e.md
tests/: README.md  conftest.py
tools/: reset_db.py  scan_naive_datetimes.py
(+1024 files in other folders)
