[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "debtonator"
version = "0.3.79"
authors = [
  { name = "Debtonator Team" },
]
description = "Bill & Cashflow Management System"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "sqlalchemy",
    "pydantic",
    "alembic",
    "aiosqlite",
    "uvicorn",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src"]
