[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "debtonator"
version = "0.5.100"
authors = [
  { name = "Debtonator Team" },
]
description = "Bill & Cashflow Management System"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "sqlalchemy>=2.0.23",
    "alembic>=1.12.1",
    "pydantic>=2.5.1",
    "pydantic-settings>=2.1.0",
    "aiosqlite>=0.19.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "email-validator>=2.1.0",
    "pandas>=2.1.4",
    "openpyxl>=3.1.2",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]
dev = [
    "autoflake>=2.2.0",
    "black>=23.7.0",
    "isort>=5.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "asyncio: mark test as async/await test",
    "unit: mark test as a unit test",
    "integration: mark test as an integration test",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
addopts = "-v --showlocals"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.autoflake]
remove-all-unused-imports = true
remove-unused-variables = false
ignore-init-module-imports = true
recursive = true

[tool.pylint.messages_control]
disable = [
    "no-member",  # Disable no-member warnings globally (for schema factory decorator magic)
]
